# ifmo_mega_school_2026

./: README.md  interview_log.json  pyproject.toml
results/: interview_log_1.json  interview_log_2.json  interview_log_3.json  interview_log_4.json  interview_log_5.json
src/: critic.py  defenitions.py  evaluator.py  main.py  question_planner.py
